crates/escalier_hm/src/parser/snapshots/escalier_hm__parser__tests__jsx-10.snap
---
source: crates/escalier_hm/src/parser/mod.rs
expression: "parse(\"let elem = <div point={point} id=\\\"point\\\">Hello, {msg}</div>;\")"
---
Ok(
    Program {
        statements: [
            Statement {
                loc: SourceLocation {
                    start: Position {
                        line: 0,
                        column: 0,
                    },
                    end: Position {
                        line: 0,
                        column: 60,
                    },
                },
                span: 0..60,
                kind: VarDecl(
                    VarDecl {
                        pattern: Pattern {
                            loc: SourceLocation {
                                start: Position {
                                    line: 0,
                                    column: 4,
                                },
                                end: Position {
                                    line: 0,
                                    column: 8,
                                },
                            },
                            span: 4..8,
                            kind: Ident(
                                BindingIdent {
                                    name: "elem",
                                    mutable: false,
                                    span: 4..8,
                                    loc: SourceLocation {
                                        start: Position {
                                            line: 0,
                                            column: 4,
                                        },
                                        end: Position {
                                            line: 0,
                                            column: 8,
                                        },
                                    },
                                },
                            ),
                            inferred_type: None,
                        },
                        type_ann: None,
                        init: Some(
                            Expr {
                                loc: SourceLocation {
                                    start: Position {
                                        line: 0,
                                        column: 11,
                                    },
                                    end: Position {
                                        line: 0,
                                        column: 59,
                                    },
                                },
                                span: 11..59,
                                kind: JSXElement(
                                    JSXElement {
                                        loc: SourceLocation {
                                            start: Position {
                                                line: 0,
                                                column: 11,
                                            },
                                            end: Position {
                                                line: 0,
                                                column: 59,
                                            },
                                        },
                                        span: 11..59,
                                        name: "div",
                                        attrs: [
                                            JSXAttr {
                                                loc: SourceLocation {
                                                    start: Position {
                                                        line: 0,
                                                        column: 16,
                                                    },
                                                    end: Position {
                                                        line: 0,
                                                        column: 29,
                                                    },
                                                },
                                                span: 16..29,
                                                ident: Ident {
                                                    loc: SourceLocation {
                                                        start: Position {
                                                            line: 0,
                                                            column: 16,
                                                        },
                                                        end: Position {
                                                            line: 0,
                                                            column: 21,
                                                        },
                                                    },
                                                    span: 16..21,
                                                    name: "point",
                                                },
                                                value: JSXExprContainer(
                                                    JSXExprContainer {
                                                        loc: SourceLocation {
                                                            start: Position {
                                                                line: 0,
                                                                column: 22,
                                                            },
                                                            end: Position {
                                                                line: 0,
                                                                column: 29,
                                                            },
                                                        },
                                                        span: 22..29,
                                                        expr: Expr {
                                                            loc: SourceLocation {
                                                                start: Position {
                                                                    line: 0,
                                                                    column: 23,
                                                                },
                                                                end: Position {
                                                                    line: 0,
                                                                    column: 28,
                                                                },
                                                            },
                                                            span: 23..28,
                                                            kind: Ident(
                                                                Ident {
                                                                    loc: SourceLocation {
                                                                        start: Position {
                                                                            line: 0,
                                                                            column: 23,
                                                                        },
                                                                        end: Position {
                                                                            line: 0,
                                                                            column: 28,
                                                                        },
                                                                    },
                                                                    span: 23..28,
                                                                    name: "point",
                                                                },
                                                            ),
                                                            inferred_type: None,
                                                        },
                                                    },
                                                ),
                                            },
                                            JSXAttr {
                                                loc: SourceLocation {
                                                    start: Position {
                                                        line: 0,
                                                        column: 30,
                                                    },
                                                    end: Position {
                                                        line: 0,
                                                        column: 40,
                                                    },
                                                },
                                                span: 30..40,
                                                ident: Ident {
                                                    loc: SourceLocation {
                                                        start: Position {
                                                            line: 0,
                                                            column: 30,
                                                        },
                                                        end: Position {
                                                            line: 0,
                                                            column: 32,
                                                        },
                                                    },
                                                    span: 30..32,
                                                    name: "id",
                                                },
                                                value: Lit(
                                                    Str(
                                                        Str {
                                                            loc: SourceLocation {
                                                                start: Position {
                                                                    line: 0,
                                                                    column: 33,
                                                                },
                                                                end: Position {
                                                                    line: 0,
                                                                    column: 40,
                                                                },
                                                            },
                                                            span: 33..40,
                                                            value: "point",
                                                        },
                                                    ),
                                                ),
                                            },
                                        ],
                                        children: [
                                            JSXText(
                                                JSXText {
                                                    loc: SourceLocation {
                                                        start: Position {
                                                            line: 0,
                                                            column: 41,
                                                        },
                                                        end: Position {
                                                            line: 0,
                                                            column: 48,
                                                        },
                                                    },
                                                    span: 41..48,
                                                    value: "Hello, ",
                                                },
                                            ),
                                            JSXExprContainer(
                                                JSXExprContainer {
                                                    loc: SourceLocation {
                                                        start: Position {
                                                            line: 0,
                                                            column: 48,
                                                        },
                                                        end: Position {
                                                            line: 0,
                                                            column: 53,
                                                        },
                                                    },
                                                    span: 48..53,
                                                    expr: Expr {
                                                        loc: SourceLocation {
                                                            start: Position {
                                                                line: 0,
                                                                column: 49,
                                                            },
                                                            end: Position {
                                                                line: 0,
                                                                column: 52,
                                                            },
                                                        },
                                                        span: 49..52,
                                                        kind: Ident(
                                                            Ident {
                                                                loc: SourceLocation {
                                                                    start: Position {
                                                                        line: 0,
                                                                        column: 49,
                                                                    },
                                                                    end: Position {
                                                                        line: 0,
                                                                        column: 52,
                                                                    },
                                                                },
                                                                span: 49..52,
                                                                name: "msg",
                                                            },
                                                        ),
                                                        inferred_type: None,
                                                    },
                                                },
                                            ),
                                        ],
                                    },
                                ),
                                inferred_type: None,
                            },
                        ),
                        declare: false,
                    },
                ),
                inferred_type: None,
            },
        ],
    },
)
